[from | refactoring] overflow scrolling fixed

--- a/Cooper/ClientApp/src.v2/app/components/games-list/games-list.component.css
+++ b/Cooper/ClientApp/src.v2/app/components/games-list/games-list.component.css
@@ -7,5 +7,5 @@
   
   .games-list {
     height: 210px;
-    overflow-y: scroll;
+    overflow: auto;
 }
