--- a/Cooper/ClientApp/src.v2/app/components/user-connections-list/user-connections-list.component.css
+++ b/Cooper/ClientApp/src.v2/app/components/user-connections-list/user-connections-list.component.css
@@ -7,5 +7,5 @@
   
   .user-interaction-list {
     height: 210px;
-    overflow-y: scroll;
+    overflow: auto;
 }
